develop_requirement_proj/static/css/drs.css
/* ... */
    

    #filelist tr>td:first-child{padding-left: 1.5rem !important;}
    #filelist tr>td:last-child{padding-right: 1.5rem !important;}
    #filelist tr:hover>td:first-child{
        border-top-left-radius: .8rem;
        border-bottom-left-radius: .8rem;
        overflow: hidden;
        padding-left: 1rem;
    }
    #filelist tr:hover>td:last-child{
        border-top-right-radius: .8rem;
        border-bottom-right-radius: .8rem;
        overflow: hidden;
        padding-right: 1rem;
    }
    #filelist tr td{
        padding: .4rem;
    }
    #filelist tr td:nth-child(2)>img{
        margin-top: .3rem;
        width: 3.5em;
        height: 3.5em;
        border-radius: .5rem;
        object-fit: cover;
        box-shadow: 0.08rem 0.08rem 0.2rem rgba(14, 14, 14, 0.11);
    }
    #filelist .detail-view td{
        background-color: #f0f0f0;
        border-radius: .8rem;;
    }

    /* #filelist tr td:nth-child(1):hover>img{ filter: opacity(.5) blur(1px); } */
    /* #filelist tr td:nth-child(1):hover>a{ display: unset; } */
    /* #filelist tr td:nth-child(1)>a{
        left: 4em;
        display: none;
    } */

    /* #filelist tr td:last-child{
        z-index: 9;
        right: .5em;
    } */
    #display_comment_area{
        overflow: scroll;
        width: -webkit-fill-available;
        max-width: initial;
    }
    #display_comment_area::-webkit-scrollbar{
        display: none;
    }
    #comment_area{
        display: none;
        /* overflow: scroll; */
    }
    #comment_area::-webkit-scrollbar{ display: none; }



/* filter Control */
    tr th{
        text-align: left !important;
    }
    .filter-control input,.filter-control select{
        width:100% !important;
        margin-bottom: 5px;
        border: 1px solid var(--gray);
        border-radius: .5rem;
        padding-right: 1.5rem;
        background-color: var(--light);
        font-weight: 500;
        color: var(--disabled);
    }
    #table .filter-control input,.filter-control select{ background-color:#fdfdfd;}
    .filter-control input::placeholder,.filter-control select::placeholder{ color: var(--disabled); }
    .filter-control input:focus::placeholder,.filter-control select:focus::placeholder{ color: var(--grey) !important; }
    .filter-control input:focus,.filter-control select:focus{
        box-shadow: none;
        border: 1px solid var(--gray);
        background-color: var(--secondary)!important;
        color: var(--light);
    }



/* tagModal table  start */
    .table-wapper {
        max-height: 50px;
        width: 100%;
        overflow: hidden;
        /* display:inline-block; */
    }

    .table-wapper:hover {
        overflow: visible;
        max-height: fit-content;
        display:inline-block;
    }
    .table-wapper table::-webkit-scrollbar{display: none; }
    .table-wapper tr:hover{
        background-color: unset !important;
    }
    .table-wapper td,.table-wapper th{
        padding-right: 2.5rem;
        font-size: .8rem;
        white-space: nowrap;
        text-align: start;
    }
    .table-wapper td,.table-wapper td *{
        font-size: .1rem;
    }

    #table .no-records-found>td{
        width: 100% !important;
        /* position: absolute; */
    }
    #table .no-records-found td>div{
        width: 100% !important;
        min-height: 70vh;
    }
    #table .tag_404_result{
        border-radius: .8rem;
        overflow: hidden;
    }
    #table .tag_404_result img{
        max-width: 18rem;
        max-height: 13rem;
    }
    

    #table tr{
        cursor: pointer;
    }
    
    #table tr th {
        white-space: nowrap;
        text-align: left !important;
        vertical-align: top;
        padding: 0 1rem;
    }
    #table tr td{
        border-top:unset;
        border-bottom:unset;
        padding: 0 1rem;
    }
    #table tr:hover td{
        background-color: var(--light);
    }
    #table tr:hover td:first-child{
        border-bottom-left-radius: 8px;
        border-top-left-radius: 8px;
    }
    #table tr:hover td:last-child{
        border-bottom-right-radius: 8px;
        border-top-right-radius: 8px;
    }

    .table td{
        max-height: 10rem;
        overflow: hidden;
    }
    .table td:hover{
        max-height: 20rem;
        overflow:visible;
    }
    .modal .table td,.modal .table th {
        padding: .25rem 10px .25rem 10px;
        /* max-width: 10rem; */
        width: fit-content;
    }
    #TL tbody td:last-child{
        background-color: #fff !important;
    }
    .modal .table td:hover {
        overflow:visible;
        text-overflow: unset;
        background-color: #f3f3f3;
        /* border-radius: 2em; */
        word-break: break-word;
        white-space: normal;
        font-weight: 500;
    }
    .modal .table td:first-child{
        border-top-left-radius: .8em;
        border-bottom-left-radius: .8em;
    }
    .modal .table td:last-child{
        border-top-right-radius: .8em;
        border-bottom-right-radius: .8em;
    }
    #result_tag_table_div,#present_tag_table_div,#result_tag_table_div{
        overflow-y: auto;
        max-height: 45vh;
        height: fit-content;
    }
    #result_tag_table_div{ max-height: 25vh; }


    #result_tag_table_div::-webkit-scrollbar,
    #present_tag_table_div::-webkit-scrollbar{
        display: none;
    }
    .tag_404_result{
        border-radius: .8rem;
        overflow: hidden;
    }
    .tag_404_result img{ width: 18rem; }


    .progress{
        border-radius: 2em;
        position: relative;
        height: .4rem;
        max-height: 1rem;
        width: 80%;
        background-color: var(--secondary);
        /* box-shadow: 0.08rem 0.08rem 0.15rem rgba(14, 14, 14, 0.37); */
        /* opacity: .85; */
    }
/* ... */

